--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2018"
 
 [dependencies]
 actix-cors  = "0.5"
-actix-web = "3"
+actix-web = { version = "3", features = ["openssl"] }
 openssl = "0.10"
